# stress-screen

./: .gitignore  README.md  pyproject.toml  stress_screen.spec
.github/workflows/: build-release.yml  ci.yml
configs/: analysis_defaults.yaml  temp_mapping.yaml
docs/superpowers/plans/: 2026-05-25-detection-revision.md
docs/superpowers/specs/: 2026-05-25-detection-revision-design.md
scripts/: composite_ab.py
src/stress_screen/: __main__.py  _progress.py  calibrate.py  cli.py  config.py  history.py  loader.py  models.py  segmentation.py  serialize.py  topology.py
src/stress_screen/analysis/: __init__.py  aggregate.py  li_plating.py  protocol.py  rest.py  short_circuit.py  util.py
src/stress_screen/reports/: charts.py  figures.py  findings.py  html.py  pdf.py
src/stress_screen/reports/templates/: report.html.j2
tests/: synth.py  test_aggregate.py  test_calibrate.py  test_charts.py  test_composite.py  test_config.py  test_confounds.py  test_e2e.py  test_findings.py  test_golden.py  test_history.py  test_li_plating 2.py  test_li_plating.py  test_loader.py  test_reports.py  test_rest_methods.py  test_segmentation.py  test_serialize.py  test_short_circuit.py  test_topology.py  test_util.py
tests/golden/: synth_M2_result.json
