[project]
name = "stress-screen"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "plotly>=5.18",
    "kaleido>=0.2,<0.3",
    "reportlab>=4.0",
    "jinja2>=3.1",
    "tqdm>=4.65",
]

[project.scripts]
stress_screen = "stress_screen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stress_screen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
