[project]
name = "stress-screen"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "plotly>=5.18",
    # 0.2.1.post1 ships only an armv7l Linux wheel — unusable on macOS/Windows
    "kaleido>=0.2,<0.3,!=0.2.1.post1",
    "reportlab>=4.0",
    "jinja2>=3.1",
    "tqdm>=4.65",
]

[project.scripts]
stress_screen = "stress_screen.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# The project venv lives in .venv.nosync (kept out of iCloud sync's reach);
# it must never leak into distributions. Data files stay out of the sdist too.
exclude = [".venv.nosync", ".venv", "*.csv", "*_report.html", "*_report.pdf",
           "*.ipynb", "build", "dist"]

[tool.hatch.build.targets.wheel]
packages = ["src/stress_screen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
